--- a/fpm.toml
+++ b/fpm.toml
@@ -4,16 +4,22 @@ license = "license"
 author = "Christopher Albert"
 maintainer = "albert@tugraz.at"
 copyright = "Copyright 2025, Christopher Albert"
+
 [build]
 auto-executables = true
 auto-tests = true
 auto-examples = true
 module-naming = false
+
 [install]
 library = false
 test = false
+
 [fortran]
 implicit-typing = false
 implicit-external = false
 source-form = "free"
+
+[dependencies]
+fortplotlib = { git = "https://github.com/krystophny/fortplotlib.git" }
 
