fix: add missing library dependencies for docs CI build

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y gfortran
+          sudo apt-get install -y gfortran liblapack-dev libblas-dev libsuitesparse-dev
           pip install ford
           
           # Install fpm (Fortran Package Manager) - same version as CI
